--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
+
     <groupId>com.aliyun.openservices</groupId>
     <artifactId>aliware-apache-rocketmq-cloud</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -20,4 +26,21 @@
             <version>1.9</version>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <name>Maven Central Staging Repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+    <scm>
+        <url>git@github.com:AliwareMQ/aliware-apache-rocketmq-cloud.git</url>
+        <connection>scm:git@github.com:AliwareMQ/aliware-apache-rocketmq-cloud.git</connection>
+        <developerConnection>scm:git@github.com:AliwareMQ/aliware-apache-rocketmq-cloud.git</developerConnection>
+    </scm>
 </project>
