--- a/pom.xml
+++ b/pom.xml
@@ -26,4 +26,10 @@
             <version>1.9</version>
         </dependency>
     </dependencies>
+
+    <scm>
+        <url>git@github.com:AliwareMQ/aliware-apache-rocketmq-cloud.git</url>
+        <connection>scm:git:git@github.com:AliwareMQ/aliware-apache-rocketmq-cloud.git</connection>
+        <developerConnection>scm:git:git@github.com:AliwareMQ/aliware-apache-rocketmq-cloud.git</developerConnection>
+    </scm>
 </project>
